# lib-tile-3d

./: .gitignore  CMakeLists.txt  README.md  build.py
assets/: README.txt
assets/depth/: fragment.glsl  vertex.glsl
assets/layer/: fragment.glsl  vertex.glsl
assets/lines/: fragment.glsl  vertex.glsl
assets/mesh/: fragment.glsl  vertex.glsl
assets/opencl/: math.cl  ray.cl  scene.cl  trace.cl
assets/trace/: math.cl  octree.cl  ray.cl  scene.cl  trace.cl
demo/: CMakeLists.txt
demo/ring/: CMakeLists.txt  main.cpp  worldgen.hpp
demo/ring/assets/mesh/: fragment.glsl
demo/world/: CMakeLists.txt  main.cpp  worldgen.hpp
shader/: fragment.glsl  vertex.glsl
shader/layer/: vertex.glsl
shader/mesh/: vertex.glsl
shader/opencl/: math.cl  trace.cl
shader/smallpt/: math.cl  trace.cl
src/: camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  clhelper.cpp  clhelper.hpp  config.hpp  core.hpp  glhelper.cpp  glhelper.hpp  logger.cpp  logger.hpp  main.cpp  math.cpp  math.hpp  mesh.cpp  mesh.hpp  pallet.cpp  pallet.hpp  region.cpp  region.hpp  shader.cpp  voxel.cpp  voxel.hpp
src/include/: config.hpp  external.hpp  forward.hpp
src/renderer/: material.hpp  matrix.cpp  matrix.hpp  pathtracer.cpp  pathtracer.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  smallpt.cpp  smallpt.hpp  texture.cpp  texture.hpp  vertex.cpp  vertex.hpp
src/util/: buffer.hpp  charset.cpp  charset.hpp  thread_pool.cpp  thread_pool.hpp  trait.hpp
src/world/: chunk.cpp  chunk.hpp  mesh.cpp  mesh.hpp  octree.cpp  octree.hpp  region.cpp  region.hpp  world.cpp  world.hpp  worldgen.cpp  worldgen.hpp
